# mccc

./: .pre-commit-config.yaml  README.md  REVIEW.md  commands.txt  mccc.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: cli-usage.md  code-overview.md  getting-started.md  index.md  model-and-results.md  testing.md
mccc/: geometry.py  monte_carlo.py  plotting.py  sampling.py  setup.py
tests/: test_geometry.py  test_mccc.py  test_monte_carlo.py  test_sampling.py  test_setup.py
