[tool.poetry]
name = "mccc"
version = "0.0.1"
description = "Monte Carlo criticality code"
authors = [ "msleigh", "msleigh@users.noreply.github.com" ]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.6"
matplotlib = "^3.5.3"
pandas = "^2.1.3"
click = "^8.1.7"

black = {version = "^23.12.0", optional = true}
mkdocs-material = {version = "^9.5.2", optional = true}
pre-commit = {version = "^3.6.0", optional = true}
pytest = {version = "^7.4.3", optional = true}
ruff = {version = "^0.1.8", optional = true}
towncrier = {version = "^23.11.0", optional = true}

[tool.poetry.extras]
docs = ["mkdocs-material"]
tests = ["pytest"]
dev = ["black", "pre-commit", "ruff", "towncrier"]

[tool.poetry.scripts]
mccc = "mccc.monte_carlo:main"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/msleigh/mccc"
"Bug Tracker" = "https://github.com/msleigh/mccc/issues"
"CI" = "https://github.com/msleigh/mccc/actions"
"Changelog" = "https://github.com/msleigh/mccc/releases"
