[project]
name = "mccc"
version = "0.0.1"
description = "Monte Carlo criticality code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "msleigh", email = "msleigh@users.noreply.github.com" },
]
license = "Apache-2.0"
dependencies = [
    "click>=8.1.7,<9",
    "matplotlib>=3.5.3,<4",
    "numpy>=1.21.6,<2",
    "pandas>=2.1.3,<3",
]
optional-dependencies.docs = [
    "mkdocs-material>=9.5.2,<10",
]
optional-dependencies.tests = [
    "pytest>=7.4.3,<8",
]
optional-dependencies.dev = [
    "black>=23.12.0,<24",
    "pre-commit>=3.6.0,<4",
    "ruff>=0.1.8,<0.2",
    "towncrier>=23.11.0,<24",
]
scripts.mccc = "mccc.monte_carlo:main"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/msleigh/mccc"
"Bug Tracker" = "https://github.com/msleigh/mccc/issues"
"CI" = "https://github.com/msleigh/mccc/actions"
"Changelog" = "https://github.com/msleigh/mccc/releases"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"
